# wayvr-dashboard

./: .gitignore  README.md  dev.oo8.wayvr_dashboard.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wayvr-dashboard.desktop
.github/: FUNDING.yml
.github/workflows/: appimage.sh  build.sh  build.yml  compile.sh  configure_env.sh  package.sh
.github/workflows/res/: AppRun
appimage/: deb_to_appimage.sh
libsteamium/: Cargo.toml  README.md
libsteamium/cli/: Cargo.toml
libsteamium/cli/src/: main.rs
libsteamium/src/: lib.rs
public/sounds/: app_start.opus  hover.opus  panel_change.opus  press_in.opus  press_out.opus  startup.opus
src/: app.module.scss  app.module.scss.d.ts  clock.tsx  dashboard.tsx  event.tsx  globals.tsx  gui.tsx  ipc.ts  main.tsx  preferences.ts  utils.ts  vars.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  client_ipc.rs  frontend_ipc.rs  ipc.rs  lib.rs  main.rs
src-tauri/src/util/: audio.rs  desktop_finder.rs  icon_finder.rs  mod.rs  notifier.rs  nvidia_detect.rs  pactl_wrapper.rs  steam_bridge.rs
src-tauri/src/wlx_client_ipc/: ipc.rs  packet_client.rs  packet_server.rs
src/gui/: gui.tsx  toast_manager.module.scss  toast_manager.module.scss.d.ts  toast_manager.tsx  window_manager.tsx  wm.module.scss  wm.module.scss.d.ts
src/panel/: applications.tsx  games.tsx  home.module.scss  home.module.scss.d.ts  home.tsx  monado.tsx  running_apps.tsx  settings.tsx
src/views/: battery_levels.tsx  display_list.tsx  display_options.tsx  new_display.tsx  popup_volume.tsx  process_list.tsx  select_resolution.tsx  window_list.tsx
