[package]
name = "libsteamium"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
keyvalues-parser = { git = "https://github.com/CosmicHorrorDev/vdf-rs.git", rev = "2aff7147c5ba2bf2551566269dc167099fe7d527" }
log = "0.4.27"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
