[package]
name = "libsteamium"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
keyvalues-parser = { git = "https://github.com/CosmicHorrorDev/vdf-rs.git", rev = "2aff7147c5ba2bf2551566269dc167099fe7d527" }
log = "0.4.27"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
steam_shortcuts_util = "1.1.7"
base64 = "0.22.1"
env = "1.0.1"