[package]
name = "wayvr_dashboard"
version = "0.1.2"
description = "A VR dashboard for WayVR"
authors = ["oo8.dev"]
edition = "2021"


[lib]
name = "wayvr_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true
strip = false
lto = false
opt-level = 0

[profile.dev.package."*"]
opt-level = 0
incremental = true

[profile.dev.build-override]
opt-level = 0
incremental = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-fs = "2"
walkdir = "2.5.0"
xdg = "2.5.2"
anyhow = "1.0.93"
rust-ini = "0.21.1"
#steamworks = "0.11.0"
log = "0.4.22"
env_logger = "0.11.6"
keyvalues-parser = { git = "https://github.com/CosmicHorrorDev/vdf-rs.git" }
tauri-plugin-http = { version = "2.2.0", features = ["unsafe-headers"] }
interprocess = { version = "2.2.2", features = ["tokio"] }
bytes = "1.9.0"
tokio = "1.42.0"
tokio-util = "0.7.13"
smallvec = "1.13.2"
wayvr_ipc = { git = "https://github.com/olekolek1000/wayvr-ipc.git", rev = "3c411d09ba1bba2609288e29739c0f1ec736b012", features = [
	"client",
] }
alsa = "0.9.1"
serde_json = "1.0.135"
