[package]
name = "wayvr_dashboard"
version = "0.2.6"
description = "A VR dashboard for WayVR"
authors = ["oo8.dev"]
edition = "2021"
homepage = "https://oo8.dev/wayvr_dashboard"

[lib]
name = "wayvr_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true
strip = false
lto = false
opt-level = 0

[profile.dev.package."*"]
opt-level = 0
incremental = true

[profile.dev.build-override]
opt-level = 0
incremental = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-fs = "2"
walkdir = "2.5.0"
xdg = "2.5.2"
anyhow = "1.0.93"
rust-ini = "0.21.1"
libmonado = { git = "https://github.com/olekolek1000/libmonado-rs.git", rev = "edfbba6f47ee28181755c80531586e3eb91745c8" }
log = "0.4.22"
env_logger = "0.11.6"
keyvalues-parser = { git = "https://github.com/CosmicHorrorDev/vdf-rs.git" }
tauri-plugin-http = { version = "2.2.0", features = ["unsafe-headers"] }
interprocess = { version = "2.2.2", features = ["tokio"] }
bytes = "1.9.0"
tokio = "1.42.0"
tokio-util = "0.7.13"
smallvec = "1.13.2"
wayvr_ipc = { git = "https://github.com/olekolek1000/wayvr-ipc.git", rev = "a72587d23f3bb8624d9aeb1f13c0a21e65350f51", features = [
	"client",
] }
alsa = "0.9.1"
serde_json = "1.0.135"
glam = { version = "0.30.0", features = ["mint"] }
